doc: tokenization review :heavy_check_mark:

--- a/doc/references.bib
+++ b/doc/references.bib
@@ -43,7 +43,7 @@
 }
 
 @inproceedings{schuster2012japanese,
-  title={Japanese and korean voice search},
+  title={Japanese and Korean voice search},
   author={Schuster, Mike and Nakajima, Kaisuke},
   booktitle={2012 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
   pages={5149--5152},
@@ -143,7 +143,7 @@
 }
 
 @article{kudo2018sentencepiece,
-  title={Sentencepiece: A simple and language independent subword tokenizer and detokenizer for neural text processing},
+  title={SentencePiece: A simple and language independent subword tokenizer and detokenizer for neural text processing},
   author={Kudo, Taku and Richardson, John},
   journal={arXiv preprint arXiv:1808.06226},
   year={2018}
